@@ -16,8 +16,8 @@ MEMORY {
   ram      : o = 0x8000, l = 0x6f30
   lcddata  : o = 0xef30, l = 0x0020   /* display memory */
   ram2     : o = 0xef50, l = 0x00b0
-  motor    : o = 0xf000, l = 0x0010   /* memory-mapped motor controller */
-  ram3     : o = 0xf010, l = 0x0d70
+  motor    : o = 0xff80, l = 0x0010   /* memory-mapped motor controller */
+  ram3     : o = 0xf000, l = 0x0d70
   romdata  : o = 0xfd80, l = 0x0040   /* port shadows, interrupt vectors */
   ram4     : o = 0xfe00, l = 0x0100
     
@@ -74,6 +74,12 @@ SECTIONS {
     ___data_end = . ;
     __edata = . ;
   } > ram
+
+  .text.hi : {
+    ___text_hi = . ;
+    *(.text.hi)
+    ___etext_hi = . ;
+  } > ram3
 
   .bss : {
     ___bss     = . ;
